--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ APP_SECRET=773470e7e62a6851fbec7296ba134196
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://poll2018:4n9kv7jceGYewHYf@127.0.0.1:3306/poll2018
+DATABASE_URL="mysql://127.0.0.1:3306/poll?charset=utf8mb4&serverVersion=5.7&user=phpmyadmin&password=admin"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
